AI4Devs-backend: solución
