# backend/src/domain/models/Application.ts
@@ -50,4 +50,19 @@ export class Application {
         if (!data) return null;
         return new Application(data);
     }
+
+    static async findByCandidateAndPosition(candidateId: number, positionId: number): Promise<Application | null> {
+        const data = await prisma.application.findFirst({
+            where: { candidateId: candidateId, positionId: positionId },
+        });
+        if (!data) return null;
+        return new Application(data);
+    }
+
+    async updateInterviewStep(step: number, positionId: number) {
+        return await prisma.application.update({
+            where: { id: this.id, positionId: positionId },
+            data: { currentInterviewStep: step }
+        });
+    }
 }
